Client side implementation of OAuth 2.

--- a/guest-app/src/main/resources/templates/login.html
+++ b/guest-app/src/main/resources/templates/login.html
@@ -7,7 +7,7 @@
 
 <div layout:fragment="content">
     <div class="container main-content">
-        <h3>Atlanta Hotel Employee Login</h3>
+        <h3>Landon Hotel Employee Login</h3>
         <form th:action="@{/login}" method="post">
             <div th:if="${param.error}">
                 <div class="alert alert-danger">
