--- a/guest-app/src/main/resources/templates/layout.html
+++ b/guest-app/src/main/resources/templates/layout.html
@@ -7,12 +7,12 @@
         <link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css"/>
         <link rel="stylesheet" href="../static/css/site.css" th:href="@{/css/site.css}"/>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-        <title layout:title-pattern="$LAYOUT_TITLE | $CONTENT_TITLE">Atlanta Hotel Admin</title>
+        <title layout:title-pattern="$LAYOUT_TITLE | $CONTENT_TITLE">Landon Hotel Admin</title>
     </head>
     <body>
         <header>
             <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-                <a class="navbar-brand" th:href="@{/index}">Atlanta Hotel</a>
+                <a class="navbar-brand" th:href="@{/index}">Landon Hotel</a>
                 <div class="navbar-nav mr-auto">
                     <ul class="navbar-nav">
                         <li class="nav-item">
@@ -39,7 +39,7 @@
 
         <footer class="footer">
             <div class="container">
-                <p class="text-center text-uppercase text-muted">&copy; Sumit S</p>
+                <p class="text-center text-uppercase text-muted">&copy; Frank P Moley III 2018</p>
             </div>
         </footer>
 
