Client side implementation of OAuth 2.

--- a/guest-app/src/main/resources/templates/index.html
+++ b/guest-app/src/main/resources/templates/index.html
@@ -7,8 +7,8 @@
 
     <div layout:fragment="content">
         <div class="jumbotron main-content">
-            <h1>Welcome to Landon Hotel Admin</h1>
-            <p>The original Landon perseveres after 50 years in the heart of West London. The West End neighborhood has something for everyone—from theater to dining to historic sights. And the not-to-miss Rooftop Cafe is a great place for travelers and locals to engage over drinks, food, and good conversation.</p>
+            <h1>Welcome to Atlanta Hotel Admin</h1>
+            <p>The original Atlanta perseveres after 50 years in the heart of West Atlanta. The West End neighborhood has something for everyone—from theater to dining to historic sights. And the not-to-miss Rooftop Cafe is a great place for travelers and locals to engage over drinks, food, and good conversation.</p>
         </div>
         <div class="container">
             <h3>What do you want to do?</h3>
