--- a/guest-app/src/main/resources/templates/layout.html
+++ b/guest-app/src/main/resources/templates/layout.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css"/>
         <link rel="stylesheet" href="../static/css/site.css" th:href="@{/css/site.css}"/>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-        <title layout:title-pattern="$LAYOUT_TITLE | $CONTENT_TITLE">Landon Hotel Admin</title>
+        <title layout:title-pattern="$LAYOUT_TITLE | $CONTENT_TITLE">Atlanta Hotel Admin</title>
     </head>
     <body>
         <header>
@@ -39,7 +39,7 @@
 
         <footer class="footer">
             <div class="container">
-                <p class="text-center text-uppercase text-muted">&copy; Frank P Moley III 2018</p>
+                <p class="text-center text-uppercase text-muted">&copy; Sumit S 2018</p>
             </div>
         </footer>
 
