--- a/guest-app/src/main/resources/templates/layout.html
+++ b/guest-app/src/main/resources/templates/layout.html
@@ -12,7 +12,7 @@
     <body>
         <header>
             <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-                <a class="navbar-brand" th:href="@{/index}">Landon Hotel</a>
+                <a class="navbar-brand" th:href="@{/index}">Atlanta Hotel</a>
                 <div class="navbar-nav mr-auto">
                     <ul class="navbar-nav">
                         <li class="nav-item">
